feat(cuda): accelerate force and neighbor list
Offloads non-bonded force calculations and neighbor list construction to CUDA kernels.
Integrates CUDA into the build system (`CMakeLists.txt`) and development environment (`flake.nix`).
Replaces CPU-based cell list and force computation in `main.cpp` with GPU-accelerated functions.
Introduces `gpu_interface.cu` and `gpu_interface.h` for CUDA kernel definitions and GPU memory management.
Adds a displacement limit in `verlet_first_step` and `randomize_velocities` for stability.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,22 @@
 cmake_minimum_required(VERSION 3.20)
-project(md)
+project(MD_Simulation LANGUAGES CXX CUDA)
 
+set(CMAKE_CXX_COMPILER "g++")
+set(CMAKE_C_COMPILER "gcc")
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CUDA_STANDARD 20)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
 find_package(OpenMP REQUIRED)
+
+add_library(gpu_lib OBJECT gpu_interface.cu)
+target_compile_options(gpu_lib PRIVATE -O3 --use_fast_math)
+set_property(TARGET gpu_lib PROPERTY CUDA_ARCHITECTURES 86)
+set_property(TARGET gpu_lib PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 add_executable(main main.cpp)
 
-target_link_libraries(main PUBLIC OpenMP::OpenMP_CXX)
+target_link_libraries(main PRIVATE gpu_lib OpenMP::OpenMP_CXX)
 
-if(MSVC)
-    target_compile_options(main PRIVATE /O2 /arch:AVX2)
-else()
-    target_compile_options(main PRIVATE -O3 -march=native -ffast-math)
-endif()
+target_compile_options(main PRIVATE -O3 -march=native -ffast-math -fopenmp)
