feat(simulation): generalize for multiple system types
Introduces a 'system_type' config option and initialization for argon and methane. Atom parameters are now dynamically passed to the GPU. Fixes Coulomb force calculation in GPU kernel. Implements dynamic box size calculation and refines the warmup procedure.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
+set(CMAKE_POLICY_VERSION_MINIMUM 3.5)
+project(MD_Simulation LANGUAGES CXX CUDA C)
 
-project(MD_Simulation LANGUAGES CXX CUDA)
-
-set(CMAKE_CXX_COMPILER "g++")
-set(CMAKE_C_COMPILER "gcc")
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CUDA_STANDARD 20)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
@@ -11,18 +9,15 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 find_package(OpenMP REQUIRED)
 
 add_library(gpu_lib OBJECT src/gpu_interface.cu)
-
 target_include_directories(gpu_lib PRIVATE include)
-
 target_compile_options(gpu_lib PRIVATE -O3 --use_fast_math)
-
 set_property(TARGET gpu_lib PROPERTY CUDA_ARCHITECTURES 86)
 set_property(TARGET gpu_lib PROPERTY POSITION_INDEPENDENT_CODE ON)
 
 add_executable(main src/main.cpp)
 
+set_property(TARGET main PROPERTY CUDA_ARCHITECTURES 86)
+
 target_link_libraries(main PRIVATE gpu_lib OpenMP::OpenMP_CXX)
-
 target_include_directories(main PRIVATE include)
-
 target_compile_options(main PRIVATE -O3 -march=native -ffast-math -fopenmp)
